--- a/client/src/App.css
+++ b/client/src/App.css
@@ -449,18 +449,9 @@ a svg {
 }
 
 @media screen and (max-width: 942px) {
-  /* .post-container {
-    grid-template-columns: repeat(2, 1fr);
-  } */
-
   .homepage-banner {
     flex-direction: column;
   }
-
-  /* .post-img img {
-    width: 100%;
-    height: 16rem;
-  } */
 }
 
 @media screen and (max-width: 722px) {
@@ -478,20 +469,6 @@ a svg {
     gap: 14px;
     margin-top: -1.5rem;
   }
-
-  /* .post-container {
-    grid-template-columns: 1fr;
-  } */
-
-  /* .post {
-    flex-direction: row;
-    width: 100%;
-  } */
-
-  /* .post-img img {
-    width: 15rem;
-    height: 10rem;
-  } */
 
   .post .texts h2 {
     font-size: 1rem;
@@ -548,6 +525,7 @@ a svg {
 
   .username {
     font-size: 1.1rem;
+    margin-bottom: 0.3rem;
   }
 
   .post-page h1 {
